# object-find-2d-sift-ros

./: CMakeLists.txt  README.md  package.xml
launch/: object_find_test.launch~  object_find_test_cuda.launch
src/: camera_tracking_sift.cpp  cuda_sift.cpp  sift.cpp  sift.h
